--- a/Python/Python Study Notes/15. Functions 函数.md
+++ b/Python/Python Study Notes/15. Functions 函数.md
@@ -262,6 +262,8 @@ All these local variables appear when the function is called and disappear when 
 
 ## Scopes 作用域
 
+### Scope Basics
+
 When you use a name in a program, Python creates, changes, or looks up the name in what is known as a namespace—a place where names live. When we talk about the search for a name’s value in relation to code, the term scope refers to a namespace: that is, the location of a name’s assignment in your source code determines the scope of the name’s visibility to your code.
 
 Just about everything related to names, including scope classification, happens at assignment time in Python. As we’ve seen, names in Python spring into existence when they are first assigned values, and they must be assigned before they are used. Because names are not declared ahead of time, Python uses the location of the assignment of a name to associate it with (i.e., bind it to) a particular namespace. In other words, the place where you assign a name in your source code determines the namespace it will live in, and hence its scope of visibility.
@@ -330,6 +332,244 @@ any type of assignment within a function classifies a name as local. This includ
 in-place changes to objects do not classify names as locals; only actual name assignments do.
 
 
+
+#### Name Resolution: The LEGB Rule 变量名解析
+
+it really boils down to three simple rules. With a `def` statement:
+
+- Name assignments create or change local names by default.
+
+
+- Name references search at most four scopes: local, then enclosing functions (if any), then global, then built-in.
+
+
+
+- Names declared in `global` and `nonlocal` statements map assigned names to enclosing module and function scopes, respectively.
+
+> all names assigned inside a function def statement (or a lambda, an expression we’ll meet later) are locals by default. Functions can freely use names assigned in syntactically enclosing functions and the global scope, but they must declare such nonlocals and globals in order to change them.
+
+Python’s name-resolution scheme is sometimes called the LEGB rule, after the scope names:
+
+- When you use an unqualified name inside a function, Python searches up to four scopes—the local (L) scope, then the local scopes of any enclosing (E) `def`s and `lambda`s, then the global (G) scope, and then the built-in (B) scope—and stops at the first place the name is found. If the name is not found during this search, Python reports an error.
+
+
+- When you assign a name in a function (instead of just referring to it in an expression), Python always creates or changes the name in the local scope, unless it’s declared to be global or nonlocal in that function.
+
+
+
+- When you assign a name outside any function (i.e., at the top level of a module file, or at the interactive prompt), the local scope is the same as the global scope—the module’s namespace.
+
+![LEGB](img/LEGB.jpg)
+
+> The LEGB scope lookup rule. When a variable is referenced, Python searches for it in this order: in the local scope, in any enclosing functions’ local scopes, in the global scope, and finally in the built-in scope. The first occurrence wins. The place in your code where a variable is assigned usually determines its scope. In Python 3.X, nonlocal declarations can also force names to be mapped to enclosing function scopes, whether assigned or not.
+
+Most statement blocks and other constructs do not localize the names used within them, with the following version-specific exceptions (whose variables are not available to, but also will not clash with, surrounding code):
+
+- Comprehension variables—the variable `X` used to refer to the current iteration item in a comprehension expression such as `[X for X in I]`. Because they might clash with other names and reflect internal state in generators, in 3.X, such variables are local to the expression itself in all comprehension forms: generator, list, set, and dictionary. In 2.X, they are local to generator expressions and set and dictionary compressions, but not to list comprehensions that map their names to the scope outside the expression. By contrast, for loop statements never localize their variables to the statement block in any Python.
+
+
+- Exception variables—the variable `X` used to reference the raised exception in a `try` statement handler clause such as `except E as X`. Because they might defer garbage collection’s memory recovery, in 3.X, such variables are local to that except block, and in fact are removed when the block is exited (even if you’ve used it earlier in your code!). In 2.X, these variables live on after the `try` statement.
+
+It’s also worth noting that the `class` statement  creates a new local scope too for the names assigned inside the top level of its block. As for `def`, names assigned inside a `class` don’t clash with names elsewhere
+
+Python searches enclosing functions for referenced names, but not enclosing classes, the LEGB rule still applies to OOP code.
+
+
+
+#### Scope Example
+
+```
+# Global scope 
+X = 99 				# X and func assigned in module: global 
+
+def func(Y):		# Y and Z assigned in function: locals 
+	# Local scope 
+	Z = X + Y		# X is a global
+	return Z
+
+func(1)				# func in module: result=100
+```
+
+> Global names: `X`, `func` 
+>
+> `X` is global because it’s assigned at the top level of the module file; it can be referenced inside the function as a simple unqualified variable without being declared global. `func` is global for the same reason; the `def` statement assigns a function object to the name `func` at the top level of the module.
+>
+> Local names: `Y`, `Z` 
+>
+> `Y` and `Z` are local to the function (and exist only while the function runs) because they are both assigned values in the function definition: `Z` by virtue of the = state-ment, and `Y` because arguments are always passed by assignment.
+
+
+
+#### The Built-in Scope
+
+the built-in scope is just a built-in module called `builtins`, but you have to import `builtins` to query built-ins because the name `builtins` is not itself built in...
+
+```
+>>> import builtins
+>>> dir(builtins)
+['ArithmeticError', 'AssertionError', 'AttributeError', 'BaseException', 'BlockingIOError', 'BrokenPipeError', 'BufferError', 'BytesWarning', 'ChildProcessError', 'ConnectionAbortedError', 'ConnectionError', 'ConnectionRefusedError', 'ConnectionResetError', 'DeprecationWarning', 'EOFError', 'Ellipsis', 'EnvironmentError', 'Exception', 'False', 'FileExistsError', 'FileNotFoundError', 'FloatingPointError', 'FutureWarning', 'GeneratorExit', 'IOError', 'ImportError', 'ImportWarning', 'IndentationError', 'IndexError', 'InterruptedError', 'IsADirectoryError', 'KeyError', 'KeyboardInterrupt', 'LookupError', 'MemoryError', 'NameError', 'None', 'NotADirectoryError', 'NotImplemented', 'NotImplementedError', 'OSError', 'OverflowError', 'PendingDeprecationWarning', 'PermissionError', 'ProcessLookupError', 'ReferenceError', 'ResourceWarning', 'RuntimeError', 'RuntimeWarning', 'StopIteration', 'SyntaxError', 'SyntaxWarning', 'SystemError', 'SystemExit', 'TabError', 'TimeoutError', 'True', 'TypeError', 'UnboundLocalError', 'UnicodeDecodeError', 'UnicodeEncodeError', 'UnicodeError', 'UnicodeTranslateError', 'UnicodeWarning', 'UserWarning', 'ValueError', 'Warning', 'ZeroDivisionError', '__build_class__', '__debug__', '__doc__', '__import__', '__loader__', '__name__', '__package__', '__spec__', 'abs', 'all', 'any', 'ascii', 'bin', 'bool', 'bytearray', 'bytes', 'callable', 'chr', 'classmethod', 'compile', 'complex', 'copyright', 'credits', 'delattr', 'dict', 'dir', 'divmod', 'enumerate', 'eval', 'exec', 'exit', 'filter', 'float', 'format', 'frozenset', 'getattr', 'globals', 'hasattr', 'hash', 'help', 'hex', 'id', 'input', 'int', 'isinstance', 'issubclass', 'iter', 'len', 'license', 'list', 'locals', 'map', 'max', 'memoryview', 'min', 'next', 'object', 'oct', 'open', 'ord', 'pow', 'print', 'property', 'quit', 'range', 'repr', 'reversed', 'round', 'set', 'setattr', 'slice', 'sorted', 'staticmethod', 'str', 'sum', 'super', 'tuple', 'type', 'vars', 'zip']
+```
+
+there are really two ways to `refer` to a built-in function—by taking advantage of the LEGB rule, or by manually importing the `builtins` module:
+
+```
+>>> zip						# The normal way
+<class 'zip'>
+
+>>> import builtins			# The hard way: for customizations
+>>> builtins.zip
+<class 'zip'>
+
+>>> zip is builtins.zip		# Same object, different lookups
+True
+```
+
+don’t redefine a built-in name you need.
+
+> Version skew note:
+>
+> The Python 3.X `builtins` module used here is named `__builtin__` in Python 2.X. In addition, the name `__builtins__` (with the s) is preset in most global scopes, including the interactive session, to reference the module known as `builtins` in 3.X and `__builtin__` in 2.X, so you can often use `__builtins__` without an import but cannot run an import on that name itself—it’s a preset variable, not a module’s name.
+>
+> in 3.X `builtins` is `__builtins__` is `True` after you import `builtins`, and in 2.X `__builtin__` is `__builtins__` is `True` after you import `__builtin__`.
+
+
+
+### The global Statement
+
+The `global` statement and its `nonlocal` 3.X cousin are the only things that are remotely like declaration statements in Python. they are namespace declarations. The `global` statement tells Python that a function plans to change one or more global names—that is, names that live in the enclosing module’s scope (namespace).
+
+- Global names are variables assigned at the top level of the enclosing module file.
+
+
+- Global names must be declared only if they are assigned within a function.
+
+
+- Global names may be referenced within a function without being declared.
+
+The `global` statement consists of the keyword `global`, followed by one or more names separated by commas. All the listed names will be mapped to the enclosing module’s scope when assigned or referenced within the function body. For instance:
+
+```
+X = 88				# Global X
+
+def func():
+	global X 
+	X = 99			# Global X: outside def
+
+func() 
+print(X)			# Prints 99
+```
+
+> some programs designate a single module to collect globals; as long as this is expected, it is not as harmful. Programs that use multithreading to do parallel processing in Python also commonly depend on global variables—they become shared memory between functions running in parallel threads, and so act as a communication device.
+
+
+
+#### Program Design: Minimize Cross-File Changes
+
+the best way to communicate across file boundaries is to call functions, passing in arguments and getting back return values.
+
+```
+# first.py 
+X = 99
+
+def setX(new):			# Accessor make external changes explit 
+	global X 			# And can manage access in a single place
+	X = new
+
+# second.py 
+import first 
+first.setX(88)			# Call the function instead of changing directly
+```
+
+
+
+#### Other Ways to Access Globals
+
+```
+# thismod.py
+
+var = 99				# Global variable == module attribute
+
+def local():
+	var = 0				# Change local var
+	
+def glob1():
+	global var 			# Declare global (normal) 
+	var += 1			# Change global var
+
+def glob2():
+	var = 0 			# Change local var 
+	import thismod 		# Import myself 
+	thismod.var += 1	# Change global var
+
+def glob3():
+	var = 0 						# Change local var 
+	import sys 						# Import system table 
+	glob = sys.modules['thismod'] 	# Get module object (or use __name__) 
+	glob.var += 1					# Change global var
+
+def test():
+	print(var) 
+	local(); glob1(); glob2(); glob3() 
+	print(var)
+```
+
+When run, this adds 3 to the global variable (only the first function does not impact it):
+
+```
+>>> import thismod
+>>> thismod.test() 
+99 
+102
+>>> thismod.var 
+102
+```
+
+
+
+### Scopes and Nested Functions
+
+With the addition of nested function scopes, variable lookup rules become slightly more complex. Within a function:
+
+- **A reference** (`X`) looks for the name `X` first in the current local scope (function); then in the local scopes of any lexically enclosing functions in your source code, from inner to outer; then in the current global scope (the module file); and finally in the built-in scope (the module `builtins`). `global` declarations make the search begin in the global (module file) scope instead.
+
+
+- **An assignment** (`X = value`) creates or changes the name `X` in the current local scope, by default. If X is declared global within the function, the assignment creates or changes the name X in the enclosing module’s scope instead. If, on the other hand, X is declared nonlocal within the function in 3.X (only), the assignment changes the name X in the closest enclosing function’s local scope.
+
+
+Notice that the global declaration still maps variables to the enclosing module. When nested functions are present, variables in enclosing functions may be referenced, but they require 3.X nonlocal declarations to be changed.
+
+Nested Scope Examples:
+
+```
+X = 99				# Global scope name: not used
+
+def f1():
+	X = 88 			# Enclosing def local 
+	def f2():
+		print(X) 	# Reference made in nested def
+	f2()
+
+f1()				# Prints 88: enclosing def local
+```
+
+the following code defines a function that makes and returns another function, and represents a more common usage pattern:
+
+```
+def f1():
+	X = 88 
+	def f2():
+		print(X) 		# Remembers X in enclosing def scope 
+	return f2			# Return f2 but don't call it
+
+action = f1() 			# Make, return function f2,assign f2 to action
+action()				# Call f2 now: prints 88
+```
+
+
+
+#### Factory Functions: Closures
+
+a **closure** or a **factory** function—the former describing a functional programming technique, and the latter denoting a design pattern. Whatever the label, the function object in question remembers values in enclosing scopes regardless of whether those scopes are still present in memory. In effect, they have attached packets of memory (a.k.a. state re-tention), which are local to each copy of the nested function created, and often provide a simple alternative to classes in this role.
 
 
 
