--- a/Python/Python Study Notes/15. Functions 函数.md
+++ b/Python/Python Study Notes/15. Functions 函数.md
@@ -569,7 +569,317 @@ action()				# Call f2 now: prints 88
 
 #### Factory Functions: Closures
 
-a **closure** or a **factory** function—the former describing a functional programming technique, and the latter denoting a design pattern. Whatever the label, the function object in question remembers values in enclosing scopes regardless of whether those scopes are still present in memory. In effect, they have attached packets of memory (a.k.a. state re-tention), which are local to each copy of the nested function created, and often provide a simple alternative to classes in this role.
+**a closure or a factory function—the former describing a functional programming technique, and the latter denoting a design pattern.** Whatever the label, the function object in question remembers values in enclosing scopes regardless of whether those scopes are still present in memory. In effect, they have attached packets of memory (a.k.a. state re-tention), which are local to each copy of the nested function created, and often provide a simple alternative to classes in this role.
+
+```
+>>> def maker(N):
+		def action(X):			# Make and return action
+			return X ** N 		# action retains N from enclosing scope
+		return action
+	
+>>> f = maker(2) 			# Pass 2 to argument N
+>>> f 
+<function maker.<locals>.action at 0x0000000002A4A158>
+
+>>> f(3) 					# Pass 3 to X, N remembers 2: 3 ** 2
+9
+>>> f(4) 					# 4 ** 2
+16
+
+>>> g = maker(3)			# g remembers 3, f remembers 2
+>>> g(4) 					# 4 ** 3
+64
+>>> f(4) 					# 4 ** 2
+16
+```
+
+enclosing scopes are often employed by the lambda function-creation expressions:
+
+```
+>>> def maker(N):
+		return lambda X: X ** N		# lambda functions retain state too
+
+>>> h = maker(3)
+>>> h(4) 
+64									# 4 ** 3 again
+```
+
+#### Retaining Enclosing Scope State with Defaults
+
+```
+def f1():
+	x = 88 
+	def f2(x=x):	# Remember enclosing scope X with defaults
+		print(x) 
+	f2()
+
+f1()				# Prints 88
+```
+
+avoid nesting defs within defs, The following is an equivalent of the prior example that avoids nesting altogether.
+
+```
+>>> def f1():
+		x = 88 		# Pass x along instead of nesting 
+		f2(x)		# Forward reference OK
+
+>>> def f2(x):
+		print(x)	# Flat is still often better than nested!
+
+>>> f1() 
+88
+```
+
+> to call a function defined after the function that calls it, as long as the second `def` runs before the first function is actually called. Code inside a `def` is never evaluated until the function is actually called:
+>
+> 在某一个函数内部调用一个之后才定义的函数是可行的，只要第二个函数定义的运行是在第一个函数调用前就行，在def内部的代码知道这个函数运行时才会被验证
+
+#### Nested scopes, defaults, and lambdas
+
+`lambda`， it’s an expression that generates a new function to be called later, much like a `def` statement. Because it’s an expression, though, it can be used in places that `def` cannot, such as within list and dictionary literals.
+
+```
+def func():
+	x = 4 
+	action = (lambda n: x ** n) 	# x remembered from enclosing def
+	return action
+
+x = func() 
+print(x(2))							# Prints 16, 4 ** 2
+```
+
+programmers used defaults to pass values from an enclosing scope into `lambda`s, just as for `def`s.
+
+```
+def func():
+	x = 4 
+	action = (lambda n, x=x: x ** n) 		# Pass x in manually
+	return action
+```
+
+#### Loop variables may require defaults, not scopes
+
+if a `lambda` or `def` defined within a function is nested inside a loop, and the nested function references an enclosing scope variable that is changed by that loop, all functions generated within the loop will have the same value—the value the referenced variable had in the last loop iteration. In such cases, you must still use defaults to save the variable’s current value instead.
+
+```
+>>> def makeActions():
+...     acts = []
+...     for i in range(5):					# Tries to remember each i
+...         acts.append(lambda x: i ** x)	# But all remember same last i!
+...     return acts
+... 
+>>> acts = makeActions()
+>>> acts[0]
+<function makeActions.<locals>.<lambda> at 0x1013d6378>
+>>> acts[0](2)			# All are 4 ** 2, 4=value of last i
+16
+>>> acts[0](3)
+64
+>>> acts[1](2)			# This should be 1 ** 2 (1)
+16
+>>> acts[2](2)			# This should be 2 ** 2 (4)
+16
+>>> acts[3](2)
+16
+>>> acts[4](2)			# Only this should be 4 ** 2 (16)
+16
+```
+
+This is the one case where we still have to explicitly retain enclosing scope values with default arguments, rather than enclosing scope references. That is, to make this sort of code work, we must pass in the current value of the enclosing scope’s variable with a default. Because defaults are evaluated when the nested function is created (not when it’s later called), each remembers its own value for i:
+
+```
+>>> def makeActions():
+...     acts = []
+...     for i in range(5):							# Use defaults instead
+...         acts.append(lambda x, i=i: i ** x)		# Remember current i
+...     return acts
+... 
+>>> acts = makeActions()
+>>> acts[0](2)				# 0 ** 2
+0
+>>> acts[1](2)				# 1 ** 2
+1
+>>> acts[2](2)				# 2 ** 2
+4
+>>> acts[4](2)				# 4 ** 2
+16
+```
+
+#### Arbitrary scope nesting
+
+scopes may nest arbitrarily, but only enclosing function def statements (not classes) are searched when names are referenced:
+
+```
+>>> def f1():
+	x = 99 
+	def f2():
+		def f3(): 
+			print(x) 		# Found in f1's local scope!
+		f3() 
+	f2()
+
+>>> f1() 
+99
+```
+
+Python will search the local scopes of all enclosing `def`s, from inner to outer, after the referencing function’s local scope and before the module’s global scope or built-ins.
+
+
+
+### The nonlocal Statement in 3.X
+
+- `nonlocal` declares that a name will be changed in an enclosing scope.
+
+
+- Unlike `global`, `nonlocal` applies to a name in an enclosing function’s scope, not the global module scope outside all `def`s.
+
+
+- unlike `global`, `nonlocal` names must already exist in the enclosing function’s scope when declared—they can exist only in enclosing functions and cannot be created by a first assignment in a nested `def`.
+
+> In other words, `nonlocal` both allows assignment to names in enclosing function scopes and limits scope lookups for such names to enclosing `def`s.
+
+#### nonlocal Basics
+
+Python 3.X introduces a new `nonlocal` statement, which has meaning only inside a function:
+
+```
+def func():
+	nonlocal name1, name2, ...		# OK here
+
+>>> nonlocal X 
+SyntaxError: nonlocal declaration not allowed at module level
+```
+
+> In Python 2.X, when one function `def` is nested in another, the nested function can reference any of the names defined by assignment in the enclosing `def`’s scope, but it cannot change them. 
+> In 3.X, declaring the enclosing scopes’ names in a `nonlocal` statement enables nested functions to assign and thus change such names as well.
+
+This provides a way for enclosing functions to provide writeable state information, remembered when the nested function is later called. Allowing the state to change makes it more useful to the nested function
+
+`nonlocal` causes searches for the names listed in the statement to begin in the enclosing `def`s’ scopes, not in the local scope of the declaring function. That is, `nonlocal` also means “skip my local scope entirely.”
+
+the names listed in a `nonlocal` must have been previously defined in an enclosing `def` when the `nonlocal` is reached, or an error is raised. The net effect is much like `global`: `global` means the names reside in the enclosing module, and `nonlocal` means they reside in an enclosing `def`. `nonlocal` scope search is restricted to only enclosing `def`s. That is, nonlocal names can appear only in enclosing `def`s, not in the module’s global scope or built-in scopes outside the `def`s.
+
+- **global** makes scope lookup begin in the enclosing module’s scope and allows names there to be assigned. Scope lookup continues on to the built-in scope if the name does not exist in the module, but assignments to global names always create or change them in the module’s scope.
+- **nonlocal** restricts scope lookup to just enclosing `def`s, requires that the names already exist there, and allows them to be assigned. Scope lookup does not continue on to the global or built-in scopes.
+
+#### nonlocal in Action
+
+```
+C:\code> c:\python33\python 
+>>> def tester(start):
+	state = start 				# Referencing nonlocals works normally 
+	def nested(label):
+		print(label, state) 	# Remembers state in enclosing scope
+	return nested
+>>> F = tester(0)
+>>> F('spam') 
+spam 0
+>>> F('ham') 
+ham 0
+```
+
+Changing a name in an enclosing `def`’s scope is not allowed by default, though; this is the normal case in 2.X as well:
+
+```
+>>> def tester(start):
+	state = start 
+	def nested(label): 
+		print(label, state) 
+		state += 1 				# Cannot change by default (never in 2.X)
+	return nested
+
+>>> F = tester(0)
+>>> F('spam') 
+UnboundLocalError: local variable 'state' referenced before assignment
+```
+
+##### Using nonlocal for changes
+
+under 3.X, if we declare `state` in the `tester` scope as nonlocal within `nested`, we get to change it inside the nested function. This works even though `tester` has returned and exited by the time we call the returned `nested` function through the name F:
+
+```
+>>> def tester(start):
+	state = start 			# Each call gets its own state 
+	def nested(label): 
+		nonlocal state 		# Remembers state in enclosing scope 
+		print(label, state) 
+		state += 1 			# Allowed to change it if nonlocal
+	return nested
+
+>>> F = tester(0)
+>>> F('spam') 		# Increments state on each call
+spam 0
+>>> F('ham') 
+ham 1
+>>> F('eggs') 
+eggs 2
+
+>>> G = tester(42)	# Make a new tester that starts at 42
+>>> G('spam') 
+spam 42
+>>> G('eggs') 		# My state information updated to 43
+eggs 43
+>>> F('bacon') 		# But F's is where it left off: at 3 
+bacon 3				# Each call has different state information
+```
+
+`nonlocal` names really must have previously been assigned in an enclosing `def`’s scope when a `nonlocal` is evaluated, or else you’ll get an error.
+
+> they are checked at function definition time before either an enclosing or nested function is called:
+
+```
+>>> def tester(start):
+	def nested(label): 
+		nonlocal state 			# Nonlocals must already exist in enclosing def!
+		state = 0 
+		print(label, state) 
+	return nested
+	
+SyntaxError: no binding for nonlocal 'state' found
+
+>>> def tester(start):
+		def nested(label): 
+			global state 		# Globals don't have to exist yet when declared 
+			state = 0 			# This creates the name in the module now
+			print(label, state) 
+		return nested
+
+>>> F = tester(0)
+>>> F('abc') 
+abc 0
+>>> state 
+0
+```
+
+`nonlocal` restricts the scope lookup to just enclosing `def`s; nonlocals are not looked up in the enclosing module’s global scope or the built-in scope outside all `def`s, even if they are already there:
+
+```
+>>> spam = 99
+>>> def tester():
+	def nested():
+		nonlocal spam 			# Must be in a def, not the module! 
+		print('Current=', spam) 
+		spam += 1
+	return nested
+	
+SyntaxError: no binding for nonlocal 'spam' found
+```
+
+
+
+### State with nonlocal: 3.X only
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
