--- a/Python/Python Study Notes/15. Functions 函数.md
+++ b/Python/Python Study Notes/15. Functions 函数.md
@@ -867,17 +867,216 @@ SyntaxError: no binding for nonlocal 'spam' found
 
 
 
-### State with nonlocal: 3.X only
+
+
+### State Retention Options
 
 
 
+To summarize: globals, nonlocals, classes, and function attributes all offer changeable state-retention options.
+
+- Globals support only single-copy shared data; 
+
+
+- nonlocals can be changed in 3.X only; 
+
+
+- classes require a basic knowledge of OOP; 
+
+
+- and both classes and function attributes provide portable solutions that allow state to be accessed directly from outside the stateful callable object itself.
+
+
+- decorators, a tool that by nature involves multilevel state retention.
 
 
 
+#### State with nonlocal: 3.X only
+
+We need to declare variables nonlocal only if they must be changed (other enclosing scope name references are automatically retained as usual), and nonlocal names are still not visible outside the enclosing function.
+
+```
+>>> def tester(start):				# Each call gets its own state
+...     state = start
+...     def nested(label):
+...         nonlocal state			# Remembers state in enclosing scope
+...         print(label, state)
+...         state += 1				# Allowed to change it if nonlocal
+...     return nested
+... 
+>>> F = tester(0)
+>>> F('spam')						# State visible within closure only
+spam 0
+>>> F.state
+AttributeError: 'function' object has no attribute 'state'
+```
+
+> this code works in Python 3.X only
+>
+> when you are using `nonlocal` and nested function closures instead of `global`, each call to `tester` remembers its own unique copy of the `state` object.
+
+#### State with Globals: A Single Copy Only
+
+One common prescription for achieving the `nonlocal` effect in 2.X and earlier is to simply move the state out to the *global scope* (the enclosing module):
+
+it requires `global` declarations in both functions and is prone to name collisions in the global scope
+
+- it requires `global` declarations in both functions and is prone to name collisions in the global scope
+
+
+- if we call `tester` again, we’ll wind up resetting the module’s `state` variable, such that prior calls will see their `state` overwritten:
+
+```
+>>> def tester(start):
+...     global state				# Move it out to the module to change it
+...     state = start				# global allows changes in module scope
+...     def nested(label):
+...         global state
+...         print(label, state)
+...         state += 1
+...     return nested
+... 
+>>> F = tester(0)
+>>> F('spam')						# Each call increments shared global state
+spam 0
+>>> F('egg')
+egg 1
+>>> 
+>>> G = tester(42)					# Resets state's single copy in global scope
+>>> G('toast')
+toast 42
+>>> G('bacon')
+bacon 43
+>>> F('ham')						# But my counter has been overwritten!
+ham 44
+```
+
+#### State with Classes: Explicit Attributes
+
+The other prescription for changeable state information in 2.X and earlier is to use classes with attributes to make state information access more explicit than the implicit magic of scope lookup rules. 
+
+As an added benefit, each instance of a class gets a fresh copy of the state information, as a natural byproduct of Python’s object model. Classes also support inheritance, multiple behaviors, and other tools.
+
+- The function named `__init__` is run automatically when the class is called:
+
+
+- In classes, we save every attribute explicitly, whether it’s changed or just referenced, and they are available outside the class. As for nested functions and `nonlocal`, the class alternative supports multiple copies of the retained data:
+
+```
+>>> class tester:						# Class-based alternative
+...     def __init__(self, start):		# On object construction,
+...         self.state = start			# save state explicitly in new object
+...     def nested(self, label):
+...         print(label, self.state)	# Reference state explicitly
+...         self.state += 1				# Changes are always allowed
+... 
+>>> F = tester(0)						# Create instance, invoke __init__
+>>> F.nested('spam')					# F is passed to self
+spam 0
+>>> F.nested('ham')
+ham 1
+>>> 
+>>> G = tester(42)						# Each instance gets new copy of state
+>>> G.nested('toast')					# Changing one does not impact others
+toast 42
+>>> G.nested('bacon')
+bacon 43
+>>> F.nested('egg')						# F's state is where it left off
+egg 2
+>>> F.state								# State may be accessed outside class
+3
+```
+
+make our class objects look like callable functions using operator overloading. `__call__` intercepts direct calls on an instance, so we don’t need to call a named method:
+
+```
+>>> class tester:
+...     def __init__(self, start):
+...         self.state = start
+...     def __call__(self, label):		# Intercept direct instance calls
+...         print(label, self.state)	# So .nested() not required
+...         self. state += 1
+... 
+>>> H = tester(99)
+>>> H('good')							# Invokes __call__
+good 99
+>>> H('book')
+book 100
+```
+
+**GOOD:**
+
+- classes can make state information more obvious, by leveraging explicit attribute assignment instead of implicit scope lookups.
+
+
+- class attributes are always changeable and don’t require a nonlocal state-ment, and classes are designed to scale up to implementing richer objects with many attributes and behaviors.
 
 
 
+#### (FINAL!!!) State with Function Attributes: 3.X and 2.X 
 
+Here’s a final version of our example based on this technique, allows state to be accessed externally
+
+Because each call to the outer function produces a new nested function object, this scheme supports multiple copy per-call changeable data just like nonlocal closures and classes—a usage mode that global variables cannot provide:
+
+```
+>>> def tester(start):
+...     def nested(label):
+...         print(label, nested.state)	# nested is in enclosing scope
+...         nested.state += 1			# Change attr, not nested itself
+...     nested.state = start			# Initial state after func defined
+...     return nested
+... 
+>>> F = tester(0)
+>>> F('spam')			# F is a 'nested' with state attached
+spam 0
+>>> F('ham')
+ham 1
+>>> F.state				# Can access state outside functions too
+2
+>>> 
+>>> G = tester(42)		# G has own state, doesn't overwrite F's
+>>> G('egg')
+egg 42
+>>> G('bacon')
+bacon 43
+>>> F('ham')
+ham 2
+>>> 
+>>> G.state
+44
+>>> F.state				# State is accessible and per-call
+3
+>>> F is G				# Different function objects
+False
+```
+
+- This code relies on the fact that the function name `nested` is a local variable in the `tester` scope enclosing `nested`; as such, it can be referenced freely inside `nested`. 
+
+
+- This code also relies on the fact that changing an object in place is not an assignment to a name; when it increments `nested.state`, it is changing part of the object `nested` references, not the name `nested` itself. 
+
+
+- Because we’re not really assigning a name in the enclosing scope, no `nonlocal` declaration is required.
+
+##### State with mutables
+
+it’s also possible to change a mutable object in the enclosing scope in 2.X and 3.X without declaring its name `nonlocal`. works the same as the previous version, is just as portable, and provides changeable per-call state:
+
+```
+>>> def tester(start):
+...     def nested(label):
+...         print(label, state[0])
+...         state[0] += 1
+...     state = [start]
+...     return nested
+```
+
+> This leverages the mutability of lists, and like function attributes, relies on the fact that in-place object changes do not classify a name as local.
+
+
+
+## Arguments 参数
 
 
 
